import org.opensearch.gradle.VersionProperties

/*
 * Copyright OpenSearch Contributors
 * SPDX-License-Identifier: Apache-2.0
 */

buildscript {
    apply from: 'build-tools/repositories.gradle'

    ext {
        opensearch_group = "org.opensearch"
        isSnapshot = "true" == System.getProperty("build.snapshot", "true")
        opensearch_version = System.getProperty("opensearch.version", "3.10.0-SNAPSHOT")
        buildVersionQualifier = System.getProperty("build.version_qualifier", "")
        asm_version = "9.7"

        // 2.0.0-rc1-SNAPSHOT -> 2.0.0.0-rc1-SNAPSHOT
        version_tokens = opensearch_version.tokenize('-')
        opensearch_build = version_tokens[0] + '.0'
        if (buildVersionQualifier) {
            opensearch_build += "-${buildVersionQualifier}"
        }
        if (isSnapshot) {
            opensearch_build += "-SNAPSHOT"
        }

        common_utils_version = System.getProperty("common_utils.version", opensearch_build)
        kotlin_version = System.getProperty("kotlin.version", "1.9.23")
    }

    repositories {
        mavenLocal()
        maven { url "https://ci.opensearch.org/maven2/" }
        maven { url "https://ci.opensearch.org/m2/" }
        maven { url "https://ci.opensearch.org/ci/dbc/snapshots/maven/" }
        mavenCentral()
        maven { url "https://plugins.gradle.org/m2/" }
        maven { url "https://ci.opensearch.org/ci/dbc/snapshots/lucene/" }
    }

    dependencies {
        classpath "${opensearch_group}.gradle:build-tools:${opensearch_version}"
        classpath "gradle.plugin.com.dorongold.plugins:task-tree:1.5"
        classpath "com.diffplug.spotless:spotless-plugin-gradle:8.10.1"
        configurations.all {
            resolutionStrategy {
                force("org.eclipse.platform:org.eclipse.core.runtime:3.29.0") // for spotless transitive dependency CVE (for 3.26.100)
            }
        }
    }

    configurations {
        classpath {
            resolutionStrategy {
                //in order to handle jackson's higher release version in shadow, this needs to be upgraded to latest
                force(group: "org.ow2.asm", name: "asm", version: asm_version)
                force(group: "org.ow2.asm", name: "asm-commons", version: asm_version)
            }
        }
    }
}

plugins {
    id 'com.netflix.nebula.ospackage' version "12.0.0"
    id 'java'
    id "io.freefair.lombok" version "8.14"
    id 'jacoco'
}

apply plugin: "com.dorongold.task-tree"

allprojects {
    group = 'org.opensearch'
    version = opensearch_build

    apply from: "$rootDir/build-tools/repositories.gradle"

    plugins.withId('java') {
        java {
            sourceCompatibility = JavaVersion.VERSION_21
            targetCompatibility = JavaVersion.VERSION_21
        }
    }

    plugins.withId('jacoco') {
        jacoco.toolVersion = '0.8.14'
    }

    project.getExtensions().getExtraProperties().set("versions", VersionProperties.getVersions());

}

subprojects {
    plugins.withId('java') {
        configurations {
            testImplementation.extendsFrom compileOnly
        }
    }

    configurations.all {
        // Force spotless depending on newer version of guava due to CVE-2023-2976. Remove after spotless upgrades.
        resolutionStrategy.force "com.google.guava:guava:32.1.3-jre"
        resolutionStrategy.force 'org.apache.commons:commons-compress:1.26.0'
        resolutionStrategy.force "io.netty:netty-buffer:${versions.netty}"
        resolutionStrategy.force "io.netty:netty-codec:${versions.netty}"
        resolutionStrategy.force "io.netty:netty-codec-http:${versions.netty}"
        resolutionStrategy.force "io.netty:netty-codec-http2:${versions.netty}"
        resolutionStrategy.force "io.netty:netty-common:${versions.netty}"
        resolutionStrategy.force "io.netty:netty-handler:${versions.netty}"
        resolutionStrategy.force "io.netty:netty-resolver:${versions.netty}"
        resolutionStrategy.force "io.netty:netty-transport:${versions.netty}"
        resolutionStrategy.force "io.netty:netty-transport-native-unix-common:${versions.netty}"
        resolutionStrategy.force "software.amazon.awssdk:bom:${versions.aws}"
        resolutionStrategy.force "software.amazon.awssdk:kms:${versions.aws}"
        resolutionStrategy.force "software.amazon.awssdk:dynamodb:${versions.aws}"
        resolutionStrategy.force "software.amazon.awssdk:dynamodb-enhanced:${versions.aws}"
        resolutionStrategy.force "software.amazon.awssdk:sts:${versions.aws}"
        resolutionStrategy.force "org.dafny:DafnyRuntime:4.9.0"
    }

    configurations.all {
        exclude group: 'org.bouncycastle', module: 'bcprov-jdk18on'
    }

    apply plugin: 'com.diffplug.spotless'

    // Only wire the Eclipse JDT step when a spotless task is actually being run, so non-spotless
    // Gradle invocations (test, assemble) don't provision the formatter at configuration time.
    def runningSpotlessTask = gradle.startParameter.taskNames.any { it.toLowerCase(Locale.ROOT).contains('spotless') }

    spotless {
        java {
            removeUnusedImports()
            importOrder 'java', 'javax', 'org', 'com'
            // Pin 4.29 explicitly: spotless 8.10.0+ ships an embedded lockfile for it, so the
            // formatter resolves from Maven Central through the mirror below instead of querying a
            // P2 update site at configuration time. Keep withP2Mirrors so any non-lockfile fallback
            // still hits the ci.opensearch.org mirror rather than the eclipse.org origin.
            if (runningSpotlessTask) {
                eclipse('4.29').withP2Mirrors(Map.of("https://download.eclipse.org/", "https://ci.opensearch.org/")).configFile rootProject.file('.eclipseformat.xml')
            }
        }
    }
}

ext {
    projectSubstitutions = [:]
    licenseFile = rootProject.file('LICENSE.txt')
    noticeFile = rootProject.file('NOTICE.txt')
}

// updateVersion: Task to auto increment to the next development iteration
task updateVersion {
    onlyIf { System.getProperty('newVersion') }
    doLast {
        ext.newVersion = System.getProperty('newVersion')
        println "Setting version to ${newVersion}."
        // String tokenization to support -SNAPSHOT
        // Include the required files that needs to be updated with new Version
        ant.replaceregexp(file:'build.gradle', match: '"opensearch.version", "\\d.*"', replace: '"opensearch.version", "' + newVersion.tokenize('-')[0] + '-SNAPSHOT"', flags:'g', byline:true)
    }
}
